Update title to 1942 Clone.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>MC 1942 Game</title>
+        <title>1942 Clone</title>
         <script src="/socket.io/socket.io.js"></script>
         <link rel="stylesheet" href="style.css" />
         <audio id="shootSound" src="shoot.wav" preload="auto"></audio>
